# auto-insight

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy-staging.yml
api/: alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: cc8b261a61d9_auth_sessions_and_password_reset_tokens.py  d5d0e6b3dd72_baseline_schema.py
api/autoinsight/: __init__.py  cli.py  config.py  db.py  health.py  main.py  worker.py
api/autoinsight/adapters/: __init__.py  email.py
api/autoinsight/auth/: __init__.py  deps.py  passwords.py  router.py  service.py
api/autoinsight/models/: __init__.py  auth.py  base.py  boxoffice.py  enums.py  insight.py  messaging.py  org.py  survey.py
api/autoinsight/repositories/: __init__.py  allocations.py  base.py  context.py  customers.py  deps.py  events.py  invitations.py  organisations.py  users.py
api/tests/: conftest.py  test_auth.py  test_cli.py  test_health.py  test_migrations.py  test_tenancy.py
content/: README.md  validate.py
content/schema/: pack.schema.json
docs/: 01-product-brief.md  02-architecture.md  03-roadmap.md  STATUS.md
infra/: .gitignore  README.md  app.tf  database.tf  dns.tf  ecr.tf  iam.tf  networking.tf  outputs.tf  project.tf  providers.tf  rds.tf  runtime.tf  secrets.tf  ses.tf  variables.tf  versions.tf
infra/bootstrap/: main.tf
infra/docker/: api.Dockerfile
infra/envs/: production.tfvars  staging.tfvars
infra/github/: main.tf
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: index.css  main.tsx  (+1 more)
(+20 files in other folders)
