[project]
name = "autoinsight"
version = "0.1.0"
description = "Auto Insight API — automated audience insight for arts organisations"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "procrastinate[psycopg]",
    "pydantic-settings",
    "argon2-cffi>=25.1.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autoinsight"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["autoinsight"]

[[tool.mypy.overrides]]
module = ["procrastinate.*"]
ignore_missing_imports = true
